Made biomolecules fall of the DNA strand if they are block transcription and the transcribing polymerase bumps into it.
# 0.00.15 (61246) Feb 13, 2012
2/13/12 Deploying to dev for a review meeting.
Reinstated the 2nd tab and put a new drawing on it that represents a revised design.
# 0.00.14 (61129) Feb 8, 2012
2/8/12 Deploying to dev for use in interviews.
Added first cut at an indicator the tell the user when their protein collection is complete.
Fixed an issue where the DNA strand would get pulled too far apart by the polymerase if it had been previously attached to the strand.
Added the ability to prevent transcription factors from attaching to DNA is there is a different biomolecule in its way.
Reduced the number of polymerase, ribosome, and rna destroyer molecules in the tool box from 3 to 2 in order to avoid false connection to the number of proteins in the collection area.
Made the placement hints brighter and with a more apparent stroke so that they will be more easily seen (especially on the DNA strand).
Added a floating clock control to the last tab.
Adjusted parameter ranges and chart range to keep protein level on the chart in last tab.
Lengthened the DNA strand on the 1st tab so edges aren't seen when zooming in/out.
Fixed an issue where background cells were too large.
# 0.00.13 (61026) Feb 6, 2012
2/6/12 Deploying to dev for review and feedback.
Added counter to protein collection area for number of instances of a given protein.
Added better hint for indicating that user needs to move protein into collection area - area flashes when protein produced.
Made the DNA shape change when being transcribed.
Changed wording in protein capture are to make it clearer that it is protein TYPES that complete the collection.
Changed labels on transcription factors to use words rather than "+" and "-" symbols.
Tweaked model params on last tab to make it more responsive to changes.
Increased protein size to make them, and the capture area, more eye catching.