@@ -1,3 +1,4 @@
+Made it easier to get transcription factors and polymerase to attach to the high-affinity sites on the DNA molecule.
 Made biomolecules fall of the DNA strand if they are block transcription and the transcribing polymerase bumps into it.
 # 0.00.15 (61246) Feb 13, 2012
 2/13/12 Deploying to dev for a review meeting.
